# Two-Scoops-of-Django-5.x

./: README.md
ch3-layout/mysite/mysite/: settings.py
docs/: README.md
src/: Makefile  db.sqlite3  pyproject.toml
src/core/: models.py
src/flavors/: models.py  urls.py
src/flavors/migrations/: 0001_initial.py
src/icecreamratings/: apps.py
src/icecreamratings/media/: __init__.txt
src/icecreamratings/templates/: __init__.txt
src/project/: settings.py
src/promos/: models.py  views.py
src/requirements/: dev-requirements.in  dev-requirements.txt  requirements.txt
src/tastings/: models.py  urls.py  views.py
